<resources>
    <string name="app_name">AppProgrammingProject</string>
    <string name="projectNameHeader">The Eat Chooser</string>
    <string name="Main_Label">Where Do You Want To Eat?</string>
    <string-array name="categories">
        <item>Billie Jean</item>
        <item>PYT</item>
        <item>Thriller</item>
    </string-array>
    <string name="button_label">GO!</string>
    <string name="results_laabel">Result</string>
    <string name="try_again_button_label">Try Again</string>
    <string name="history_label">History</string>
    <string name="rest_name">Restaurants</string>
    <string name="image" />
    <string name="history_card_name">restaurant_name</string>
    <string name="history_card_rating">restaurant_rating</string>
    <string name="settings">Settings</string>
    <string name="miles">meters</string>
    <string name="radius">Radius:</string>
    <string name="done">Done</string>
    <string name="foodselecter">FoodSelecter</string>
    <string name="select">Select</string>
    <string name="your_restaurant">Your Restaurant!</string>
    <string name="address">Address</string>
    <string name="rating">Rating</string>
    <string name="radiusPromptMessage">Set The Distance From Your Location</string>

</resources>
